--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.1.5",
-    "@builder.io/qwik-city": "^1.1.5",
+    "@builder.io/qwik": "~1.2.0",
+    "@builder.io/qwik-city": "~1.2.0",
     "@types/eslint": "8.40.0",
     "@types/node": "^20.2.5",
     "@typescript-eslint/eslint-plugin": "5.59.8",
     "@typescript-eslint/parser": "5.59.8",
     "eslint": "8.41.0",
-    "eslint-plugin-qwik": "^1.1.5",
+    "eslint-plugin-qwik": "~1.2.0",
     "prettier": "2.8.8",
     "typescript": "5.0.4",
     "undici": "5.22.1",
