update prices in static data

--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/static/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
+    "download-img": "node ./tools/download-img.mjs",
+    "update-data": "node ./tools/update-data.mjs",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik",
-    "download-img": "node ./tools/download-img.mjs"
+    "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "~1.2.0",
